# conan-tiff

./: .travis.yml  CMakeLists.txt  FindTIFF.cmake  Jenkinsfile  appveyor.yml  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py  tifftest.c
